# ctf-2019-release

./: LICENSE.md
bWF0cnlvc2hrYQ/solution/: Matry_Oshka.key  steps.txt
blink/: README
challenges/decrypto/: Makefile
challenges/dribbles/: README.md
challenges/futurella/: Makefile
challenges/kookie/: Dockerfile  Makefile
challenges/mainframe/: Makefile
challenges/mixer/: Makefile
challenges/pick-tac-toe/: Dockerfile  Makefile
challenges/runit/: Makefile
challenges/runitplusplus/: Makefile
challenges/water-dragon/: README.md
challenges/weathercompanion/challenge/Weather companion/app/: CMakeLists.txt  build.gradle
challenges/weathercompanion/challenge/Weather companion/app/src/main/java/com/example/myapplication/: MainActivity.java
challenges/weathercompanion/challenge/Weather companion/app/src/main/jni/: native-lib.cpp
challenges/weathercompanion/challenge/Weather companion/app/src/main/res/values/: strings.xml
cloud2clown/deployment/: service.yml
crust/challenge/: Dockerfile
crust/deployment/: deployment.yml  service.yml
crust/distfiles/: README.md
crust/solution/: README.md  solve.rb
dawnupshaw/solution/: flag.hex  flag.txt.xz  readme.md  solve.hex
decrypto/: Dockerfile
decrypto/distfiles/: README.md
decrypto/solution/: README.md
delta/solution/: readme.md
diskimage/solution/: readme.md
dribbles/challenge/: Dockerfile  dribbles.conf
fastflag/deployment/: deployment.yml
futurella/: Dockerfile
mainframe/: Dockerfile
mixer/: Dockerfile
sendhalp/: .editorconfig  .gitignore
yayornay/: README
(+683 files in other folders)
